web-infras/parser/tests/fixtures/babel/core/scope/dupl-bind-class-func/output.txt
[SyntaxError]: Identifier has already been declared. (2,1)
2|function foo () {};
 |^
